// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Box > it works with elevations 1`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 2`] = `
<div
  class="_gutter-0_77a981 _elevation-1_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 3`] = `
<div
  class="_gutter-0_77a981 _elevation-2_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 4`] = `
<div
  class="_gutter-0_77a981 _elevation-3_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with elevations 5`] = `
<div
  class="_gutter-0_77a981 _elevation-4_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 1`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 2`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterX-1_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 3`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterX-2_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 4`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterX-3_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterXs 5`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterX-4_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 1`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 2`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterY-1_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 3`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterY-2_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 4`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterY-3_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutterYs 5`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981 _gutterY-4_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 1`] = `
<div
  class="_gutter-0_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 2`] = `
<div
  class="_gutter-1_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 3`] = `
<div
  class="_gutter-2_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 4`] = `
<div
  class="_gutter-3_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;

exports[`Box > it works with gutters 5`] = `
<div
  class="_gutter-4_77a981 _elevation-0_77a981"
  data-testid="Box"
>
  Hello world
</div>
`;
